--- a/src/consts.sass
+++ b/src/consts.sass
@@ -5,6 +5,15 @@ $c_dark_grey: #212B36
 $titleFont: freight-big-pro, serif
 $font: "Questrial", sans-serif
 
+	
+
+.smallText
+	color: pink !important
+	font-size: 2rem !important
+	font-family: "Caveat", cursive !important
+	rotate: 356deg !important
+	text-align: center 
+	line-height: 0 !important
 
 @mixin textStyles()
 	
